2017-10-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/call-ec.c (ecc_compute_public): No use of malloc.
	* src/call-rsa.c (modulus_calc, rsa_genkey): Likewise.
	* src/ecc-edwards.c (eddsa_compute_public_25519): Likewise.
	* src/ecc-mont.c (ecdh_compute_public_25519): Likewise.
	* src/openpgp-do.c (gpg_do_write_prvkey, gpg_do_chks_prvkey)
	(proc_key_import, gpg_do_keygen): Likewise.

	* polarssl/library/rsa.c: Don't include stdlib.h.
	* src/gnuk-malloc.h: Rename from stdlib.h.
	* polarssl/library/bignum.c: Include gnuk-malloc.h.

	* src/Makefile (build/flash.data): Generate.

	* src/main.c (flash_addr_key_storage_start)
	(flash_addr_data_storage_start): New.
	(main): Determine flash address.

	* src/flash.c (FLASH_ADDR_KEY_STORAGE_START)
	(FLASH_ADDR_DATA_STORAGE_START): New.
	(flash_do_storage_init, flash_terminate, flash_activate)
	(flash_key_storage_init, flash_copying_gc, flash_do_release)
	(flash_key_getpage): Use new macros.

2017-10-02  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (device_initialize_once): Not for GNU/Linux.

	* src/openpgp.c, src/flash.c: Distinguish FLASH_UPGRADE_SUPPORT.

	* src/main.c [GNU_LINUX_EMULATION]: Use emulated_main.
	(MEMORY_SIZE, MEMORY_END): Fix for GNU/Linux.

	* src/usb-ccid.c (INTR_REQ_USB): Fix for GNU/Linux.

	* library/bignum.c (mpi_montsqr): Easy C implementation.

2017-09-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/flash.c (flash_terminate, flash_activate)
	(flash_copying_gc, flash_do_write_internal, flash_do_release)
	(flash_key_write, flash_check_all_other_keys_released)
	(flash_key_fill_zero_as_released, flash_key_release)
	(flash_key_release_page, flash_clear_halfword)
	(flash_put_data_internal, flash_put_data, flash_bool_clear)
	(flash_bool_write_internal, flash_bool_write)
	(flash_enum_write_internal, flash_enum_write)
	(flash_cnt123_write_internal, flash_cnt123_increment)
	(flash_cnt123_clear, flash_erase_binary, flash_write_binary): Fix
	for GNU/Linux.
